basic nav-bar layout

--- a/scss/layout/_config.scss
+++ b/scss/layout/_config.scss
@@ -4,3 +4,7 @@ $breakpoints: (
     'large': 1024px,
     'x-large': 1280px,
 );
+
+$container-width: 1024px;
+$nav-bar-height: 42px;
+$messenger-bar-width: 210px;
