--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,7 +6,9 @@
 @import 'theme/typography';
 
 @import 'components/button';
+@import 'components/input';
 @import 'components/card';
+@import 'components/miscellaneous';
 
 @import 'layout/config';
 @import 'layout/laptop';
