--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,122 @@ body {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
+a * {
+  vertical-align: middle;
+}
+
+.btn {
+  border: none;
+}
+.btn:hover {
+  cursor: pointer;
+}
+
+.btn-link {
+  display: inline-block;
+}
+
+.silent-link {
+  text-decoration: none !important;
+  color: inherit;
+}
+
+input[type=text] {
+  padding: 0 10px;
+  min-width: 0;
+  border: none;
+}
+
+.fb-icon {
+  display: inline-block;
+  background: url("../assets/icons.png");
+  background-repeat: no-repeat;
+  background-size: 284px 408px;
+}
+.fb-icon.fb-icon-logo {
+  width: 24px;
+  height: 24px;
+  background-position: -156px -308px;
+}
+.fb-icon.fb-icon-search-light {
+  width: 16px;
+  height: 16px;
+  background-position: -155px -264px;
+}
+.fb-icon.fb-icon-search-dark {
+  width: 16px;
+  height: 16px;
+  background-position: -139px -264px;
+}
+.fb-icon.fb-icon-friends-dark {
+  width: 24px;
+  height: 24px;
+  background-position: -77px -360px;
+}
+.fb-icon.fb-icon-friends-light {
+  width: 24px;
+  height: 24px;
+  background-position: -103px -360px;
+}
+.fb-icon.fb-icon-messages-dark {
+  width: 24px;
+  height: 24px;
+  background-position: -129px -360px;
+}
+.fb-icon.fb-icon-messages-light {
+  width: 24px;
+  height: 24px;
+  background-position: -154px -360px;
+}
+.fb-icon.fb-icon-notification-dark {
+  width: 24px;
+  height: 24px;
+  background-position: -233px -334px;
+}
+.fb-icon.fb-icon-notification-light {
+  width: 24px;
+  height: 24px;
+  background-position: 0px -360px;
+}
+.fb-icon.fb-icon-help-dark {
+  width: 24px;
+  height: 24px;
+  background-position: -182px -360px;
+}
+.fb-icon.fb-icon-help-light {
+  width: 24px;
+  height: 24px;
+  background-position: -207px -360px;
+}
+.fb-icon.fb-icon-more-dark {
+  width: 24px;
+  height: 24px;
+  background-position: -25px -360px;
+}
+.fb-icon.fb-icon-more-light {
+  width: 24px;
+  height: 24px;
+  background-position: -52px -360px;
+}
+
+.hoverable:hover {
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+}
+
+.clickable:hover {
+  cursor: pointer;
+}
+
+.rounded {
+  display: inline-block;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.rounded img {
+  width: 100%;
+  height: 100%;
+}
+
 html,
 body {
   margin: 0;
@@ -16,11 +132,20 @@ section {
 
 .container {
   width: 100%;
+  overflow: hidden;
+}
+
+#nav-bar-container {
+  padding-right: 210px;
+  position: sticky;
+  top: 0;
+  overflow: hidden;
 }
 
 #nav-bar {
-  position: sticky;
-  top: 0;
+  width: 1024px;
+  height: 42px;
+  margin: 0 auto;
 }
 
 #main-container {
@@ -29,7 +154,6 @@ section {
   display: grid;
   grid-template-columns: 180px auto 308px;
   grid-gap: 10px;
-  overflow: hidden;
 }
 
 #messenger-bar-container {
@@ -38,15 +162,78 @@ section {
 }
 
 @media screen and (max-width: 1280px) {
+  #nav-bar-container {
+    padding-right: 0;
+  }
+
   #messenger-bar-container {
     float: none;
     position: fixed;
     bottom: 0;
     right: 50px;
+    height: auto;
   }
 }
-#nav-bar {
-  height: 42px;
+#nav-bar-container {
+  background-color: #4267b2;
+}
+#nav-bar-container #nav-bar {
+  display: flex;
+  align-items: center;
+}
+#nav-bar-container #nav-bar .logo-container {
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  margin-right: 10px;
+}
+#nav-bar-container #nav-bar .search-bar {
+  display: flex;
+  align-items: stretch;
+  width: 40vw;
+  min-width: 200px;
+  max-width: 450px;
+  height: 24px;
+  border-radius: 2px;
+  overflow: hidden;
+}
+#nav-bar-container #nav-bar .search-bar input {
+  flex: 1 0;
+}
+#nav-bar-container #nav-bar .search-bar button {
+  width: 48px;
+}
+#nav-bar-container #nav-bar .nav-bar-menu {
+  height: 24px;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+}
+#nav-bar-container #nav-bar .nav-bar-menu .nav-bar-menu-item {
+  position: relative;
+  height: 100%;
+  padding: 0 10px;
+  display: inline-flex;
+  align-items: center;
+  border-radius: 5px;
+  font-size: 0.75rem;
+  font-weight: bold;
+  color: #ffffff;
+  overflow: hidden;
+}
+#nav-bar-container #nav-bar .nav-bar-menu .nav-bar-menu-item:hover {
+  background: rgba(0, 0, 0, 0.2);
+}
+#nav-bar-container #nav-bar .nav-bar-menu .nav-bar-menu-item .user-avatar {
+  width: 25px;
+  height: 25px;
+}
+#nav-bar-container #nav-bar .nav-bar-menu .nav-bar-menu-item + .nav-bar-menu-item::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  height: 75%;
+  border-left: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 /*# sourceMappingURL=style.css.map */
