--- a/scss/theme/_colors.scss
+++ b/scss/theme/_colors.scss
@@ -5,10 +5,13 @@ $color-primary: #4267b2;
 $text-primary: #1c1e21;
 $text-secondary: #606770;
 $text-muted: #606770;
+$text-white: #ffffff;
 $background: #e9ebee;
 
 $card-header-background: #f5f6f7;
 $card-body-background: #ffffff;
 
+$shadow: rgba(0, 0, 0, 0.4);
+$background-hover: rgba(0, 0, 0, 0.2);
 // ==============
 $white: #fff;
