--- a/scss/theme/_typography.scss
+++ b/scss/theme/_typography.scss
@@ -2,3 +2,9 @@ body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
         'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+a {
+    * {
+        vertical-align: middle;
+    }
+}
