--- a/scss/components/_miscellaneous.scss
+++ b/scss/components/_miscellaneous.scss
@@ -10,19 +10,19 @@
         background-position: -156px -308px;
     }
 
+    &.fb-icon-search {
+        width: 16px;
+        height: 16px;
+        background-position: -139px -264px;
+    }
+
     &.fb-icon-search-light {
         width: 16px;
         height: 16px;
         background-position: -155px -264px;
     }
 
-    &.fb-icon-search-dark {
-        width: 16px;
-        height: 16px;
-        background-position: -139px -264px;
-    }
-
-    &.fb-icon-friends-dark {
+    &.fb-icon-friends {
         width: 24px;
         height: 24px;
         background-position: -77px -360px;
@@ -33,7 +33,7 @@
         background-position: -103px -360px;
     }
 
-    &.fb-icon-messages-dark {
+    &.fb-icon-messages {
         width: 24px;
         height: 24px;
         background-position: -129px -360px;
@@ -44,7 +44,7 @@
         background-position: -154px -360px;
     }
 
-    &.fb-icon-notification-dark {
+    &.fb-icon-notification {
         width: 24px;
         height: 24px;
         background-position: -233px -334px;
@@ -55,7 +55,7 @@
         background-position: -0px -360px;
     }
 
-    &.fb-icon-help-dark {
+    &.fb-icon-help {
         width: 24px;
         height: 24px;
         background-position: -182px -360px;
@@ -66,7 +66,7 @@
         background-position: -207px -360px;
     }
 
-    &.fb-icon-more-dark {
+    &.fb-icon-more {
         width: 24px;
         height: 24px;
         background-position: -25px -360px;
