--- a/scss/theme/_colors.scss
+++ b/scss/theme/_colors.scss
@@ -7,6 +7,7 @@ $text-secondary: #606770;
 $text-muted: #606770;
 $text-white: #ffffff;
 $background: #e9ebee;
+$background-button: #ebedf0;
 
 $card-header-background: #f5f6f7;
 $card-body-background: #ffffff;
