--- a/scss/theme/_colors.scss
+++ b/scss/theme/_colors.scss
@@ -2,6 +2,8 @@ $notification-badge: #fa383e;
 
 $color-primary: #4267b2;
 
+$link: #385898;
+
 $text-primary: #1c1e21;
 $text-secondary: #606770;
 $text-muted: #606770;
@@ -14,5 +16,8 @@ $card-body-background: #ffffff;
 
 $shadow: rgba(0, 0, 0, 0.4);
 $background-hover: rgba(0, 0, 0, 0.2);
+$background-hover-light: rgba(255, 255, 255, 0.5);
+
+$border: #dddfe2;
 // ==============
 $white: #fff;
