--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,22 @@
 body {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+a {
+  color: #385898;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 a * {
   vertical-align: middle;
+}
+
+body {
+  background: #e9ebee;
 }
 
 .btn {
@@ -35,78 +48,6 @@ input[type=text] {
   border: none;
 }
 
-.fb-icon {
-  display: inline-block;
-  background: url("../assets/icons.png");
-  background-repeat: no-repeat;
-  background-size: 284px 408px;
-}
-.fb-icon.fb-icon-logo {
-  width: 24px;
-  height: 24px;
-  background-position: -156px -308px;
-}
-.fb-icon.fb-icon-search {
-  width: 16px;
-  height: 16px;
-  background-position: -139px -264px;
-}
-.fb-icon.fb-icon-search-light {
-  width: 16px;
-  height: 16px;
-  background-position: -155px -264px;
-}
-.fb-icon.fb-icon-friends {
-  width: 24px;
-  height: 24px;
-  background-position: -77px -360px;
-}
-.fb-icon.fb-icon-friends-light {
-  width: 24px;
-  height: 24px;
-  background-position: -103px -360px;
-}
-.fb-icon.fb-icon-messages {
-  width: 24px;
-  height: 24px;
-  background-position: -129px -360px;
-}
-.fb-icon.fb-icon-messages-light {
-  width: 24px;
-  height: 24px;
-  background-position: -154px -360px;
-}
-.fb-icon.fb-icon-notification {
-  width: 24px;
-  height: 24px;
-  background-position: -233px -334px;
-}
-.fb-icon.fb-icon-notification-light {
-  width: 24px;
-  height: 24px;
-  background-position: 0px -360px;
-}
-.fb-icon.fb-icon-help {
-  width: 24px;
-  height: 24px;
-  background-position: -182px -360px;
-}
-.fb-icon.fb-icon-help-light {
-  width: 24px;
-  height: 24px;
-  background-position: -207px -360px;
-}
-.fb-icon.fb-icon-more {
-  width: 24px;
-  height: 24px;
-  background-position: -25px -360px;
-}
-.fb-icon.fb-icon-more-light {
-  width: 24px;
-  height: 24px;
-  background-position: -52px -360px;
-}
-
 .hoverable:hover {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
 }
@@ -115,14 +56,167 @@ input[type=text] {
   cursor: pointer;
 }
 
-.rounded {
+.rounded-img {
   display: inline-block;
   border-radius: 50%;
   overflow: hidden;
 }
-.rounded img {
+.rounded-img img {
   width: 100%;
   height: 100%;
+}
+
+.nav-icon {
+  display: inline-block;
+  background: url("../assets/nav-icons.png");
+  background-repeat: no-repeat;
+  background-size: 284px 408px;
+}
+.nav-icon.nav-icon-logo {
+  width: 24px;
+  height: 24px;
+  background-position: -156px -308px;
+}
+.nav-icon.nav-icon-search {
+  width: 16px;
+  height: 16px;
+  background-position: -139px -264px;
+}
+.nav-icon.nav-icon-search-light {
+  width: 16px;
+  height: 16px;
+  background-position: -155px -264px;
+}
+.nav-icon.nav-icon-friends {
+  width: 24px;
+  height: 24px;
+  background-position: -77px -360px;
+}
+.nav-icon.nav-icon-friends-light {
+  width: 24px;
+  height: 24px;
+  background-position: -103px -360px;
+}
+.nav-icon.nav-icon-messages {
+  width: 24px;
+  height: 24px;
+  background-position: -129px -360px;
+}
+.nav-icon.nav-icon-messages-light {
+  width: 24px;
+  height: 24px;
+  background-position: -154px -360px;
+}
+.nav-icon.nav-icon-notification {
+  width: 24px;
+  height: 24px;
+  background-position: -233px -334px;
+}
+.nav-icon.nav-icon-notification-light {
+  width: 24px;
+  height: 24px;
+  background-position: 0px -360px;
+}
+.nav-icon.nav-icon-help {
+  width: 24px;
+  height: 24px;
+  background-position: -182px -360px;
+}
+.nav-icon.nav-icon-help-light {
+  width: 24px;
+  height: 24px;
+  background-position: -207px -360px;
+}
+.nav-icon.nav-icon-more {
+  width: 24px;
+  height: 24px;
+  background-position: -26px -362px;
+}
+.nav-icon.nav-icon-more-light {
+  width: 24px;
+  height: 24px;
+  background-position: -52px -362px;
+}
+
+.fb-icon {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-image: url("../assets/fb-icons.png");
+  background-size: 38px 1684px;
+  background-repeat: no-repeat;
+}
+.fb-icon.fb-icon-newsfeed {
+  background-position: 0 -742px;
+}
+.fb-icon.fb-icon-more {
+  background-position: 0 -1336px;
+}
+.fb-icon.fb-icon-messenger {
+  background-position: 0 -192px;
+}
+.fb-icon.fb-icon-watch {
+  background-position: 0 -1160px;
+}
+.fb-icon.fb-icon-marketplace {
+  background-position: 0 -720px;
+}
+.fb-icon.fb-icon-group {
+  background-position: 0 -918px;
+}
+.fb-icon.fb-icon-groups {
+  background-position: 0 -148px;
+}
+.fb-icon.fb-icon-pages {
+  background-position: 0 -236px;
+}
+.fb-icon.fb-icon-fundraisers {
+  background-position: 0 -588px;
+}
+.fb-icon.fb-icon-saved {
+  background-position: 0 -258px;
+}
+.fb-icon.fb-icon-games {
+  background-position: 0 -808px;
+}
+.fb-icon.fb-icon-memories {
+  background-position: 0 -170px;
+}
+.fb-icon.fb-icon-crisis {
+  background-position: 0 -412px;
+}
+.fb-icon.fb-icon-jobs {
+  background-position: 0 -280px;
+}
+.fb-icon.fb-icon-gamingvideos {
+  background-position: 0 -126px;
+}
+.fb-icon.fb-icon-recommendations {
+  background-position: 0 -456px;
+}
+.fb-icon.fb-icon-offers {
+  background-position: 0 -786px;
+}
+.fb-icon.fb-icon-weather {
+  background-position: 0 -1050px;
+}
+.fb-icon.fb-icon-adactivity {
+  background-position: 0 -962px;
+}
+.fb-icon.fb-icon-friendlists {
+  background-position: 0 -544px;
+}
+.fb-icon.fb-icon-apps {
+  background-image: url(../assets/fb-icons-2.png);
+  background-size: 22px 318px;
+  background-repeat: no-repeat;
+  background-position: 0 -22px;
+}
+.fb-icon.fb-icon-calendar {
+  background-image: url(../assets/icons-calendar.png);
+  background-size: 22px 120px;
+  background-repeat: no-repeat;
+  background-position: 0 0;
 }
 
 html,
@@ -137,10 +231,6 @@ section {
 
 #messenger-bar-container {
   border: 2px solid red;
-}
-
-#side-menu {
-  border: 2px solid cornflowerblue;
 }
 
 #newsfeed {
@@ -175,7 +265,7 @@ section {
 
 #main-container {
   width: 1024px;
-  margin: 0 auto;
+  margin: 10px auto 0 auto;
   display: grid;
   grid-template-columns: 180px auto 308px;
   grid-gap: 10px;
@@ -274,6 +364,70 @@ section {
   left: 0;
   height: 75%;
   border-left: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+#side-menu .menu-group {
+  font-size: 0.8125rem;
+  margin-bottom: 10px;
+}
+#side-menu .menu-group .menu-header {
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  color: #606770;
+}
+#side-menu .menu-group .menu-header .header-settings {
+  font-weight: normal;
+  display: none;
+}
+#side-menu .menu-group:hover .header-settings {
+  display: inline-block;
+}
+#side-menu .menu-group .menu-items .menu-item {
+  display: flex;
+  min-width: 0;
+  align-items: center;
+  padding: 5px;
+  border: 1px solid transparent;
+  box-sizing: border-box;
+}
+#side-menu .menu-group .menu-items .menu-item .item-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
+}
+#side-menu .menu-group .menu-items .menu-item .item-caption {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+#side-menu .menu-group .menu-items .menu-item .item-caption.active {
+  font-weight: 900;
+}
+#side-menu .menu-group .menu-items .menu-item .item-badge {
+  flex-basis: 30px;
+  display: inline-flex;
+  justify-content: flex-end;
+  margin-left: auto;
+  color: #606770;
+  font-size: 0.6875rem;
+}
+#side-menu .menu-group .menu-items .menu-item .item-badge .item-settings:not(.fixed) {
+  display: none;
+}
+#side-menu .menu-group .menu-items .menu-item.active, #side-menu .menu-group .menu-items .menu-item:hover:not(.more-button) {
+  cursor: pointer;
+  background: rgba(255, 255, 255, 0.5);
+  border: 1px solid #dddfe2;
+}
+#side-menu .menu-group .menu-items .menu-item.active {
+  font-weight: bold;
+}
+#side-menu .menu-group .menu-items .menu-item:hover .item-badge .item-property:not(.fixed) {
+  display: none;
+}
+#side-menu .menu-group .menu-items .menu-item:hover .item-badge .item-settings {
+  display: inline-block;
 }
 
 /*# sourceMappingURL=style.css.map */
