--- a/scss/components/_miscellaneous.scss
+++ b/scss/components/_miscellaneous.scss
@@ -1,83 +1,3 @@
-.fb-icon {
-    display: inline-block;
-    background: url('../assets/icons.png');
-    background-repeat: no-repeat;
-    background-size: 284px 408px;
-
-    &.fb-icon-logo {
-        width: 24px;
-        height: 24px;
-        background-position: -156px -308px;
-    }
-
-    &.fb-icon-search {
-        width: 16px;
-        height: 16px;
-        background-position: -139px -264px;
-    }
-
-    &.fb-icon-search-light {
-        width: 16px;
-        height: 16px;
-        background-position: -155px -264px;
-    }
-
-    &.fb-icon-friends {
-        width: 24px;
-        height: 24px;
-        background-position: -77px -360px;
-    }
-    &.fb-icon-friends-light {
-        width: 24px;
-        height: 24px;
-        background-position: -103px -360px;
-    }
-
-    &.fb-icon-messages {
-        width: 24px;
-        height: 24px;
-        background-position: -129px -360px;
-    }
-    &.fb-icon-messages-light {
-        width: 24px;
-        height: 24px;
-        background-position: -154px -360px;
-    }
-
-    &.fb-icon-notification {
-        width: 24px;
-        height: 24px;
-        background-position: -233px -334px;
-    }
-    &.fb-icon-notification-light {
-        width: 24px;
-        height: 24px;
-        background-position: -0px -360px;
-    }
-
-    &.fb-icon-help {
-        width: 24px;
-        height: 24px;
-        background-position: -182px -360px;
-    }
-    &.fb-icon-help-light {
-        width: 24px;
-        height: 24px;
-        background-position: -207px -360px;
-    }
-
-    &.fb-icon-more {
-        width: 24px;
-        height: 24px;
-        background-position: -25px -360px;
-    }
-    &.fb-icon-more-light {
-        width: 24px;
-        height: 24px;
-        background-position: -52px -360px;
-    }
-}
-
 .hoverable {
     &:hover {
         box-shadow: 0 0 5px $shadow;
@@ -90,7 +10,7 @@
     }
 }
 
-.rounded {
+.rounded-img {
     display: inline-block;
     border-radius: 50%;
     overflow: hidden;
