--- a/scss/layout/_laptop.scss
+++ b/scss/layout/_laptop.scss
@@ -3,18 +3,15 @@ body {
     margin: 0;
     padding: 0;
 }
-
-// ============ Sketching
 section {
     box-sizing: border-box;
 }
 
+// ============ Sketching
 #messenger-bar-container {
     border: 2px solid red;
 }
-#side-menu {
-    border: 2px solid cornflowerblue;
-}
+
 #newsfeed {
     border: 2px solid orange;
 }
@@ -47,7 +44,7 @@ section {
 
 #main-container {
     width: $container-width;
-    margin: 0 auto;
+    margin: 10px auto 0 auto;
     display: grid;
     grid-template-columns: 180px auto 308px;
     grid-gap: 10px;
