--- a/scss/theme/_typography.scss
+++ b/scss/theme/_typography.scss
@@ -1,6 +1,14 @@
 body {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-        'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+a {
+    color: $link;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 a {
