--- a/scss/theme/_colors.scss
+++ b/scss/theme/_colors.scss
@@ -11,8 +11,8 @@ $text-white: #ffffff;
 $background: #e9ebee;
 $background-button: #ebedf0;
 
-$card-header-background: #f5f6f7;
-$card-body-background: #ffffff;
+$background-card-header: #f5f6f7;
+$background-card-body: #ffffff;
 
 $shadow: rgba(0, 0, 0, 0.4);
 $background-hover: rgba(0, 0, 0, 0.2);
