--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@
 @import 'components/button';
 @import 'components/input';
 @import 'components/card';
+@import 'components/alert';
 @import 'components/miscellaneous';
 @import 'components/icon';
 
