--- a/scss/components/_icon.scss
+++ b/scss/components/_icon.scss
@@ -180,3 +180,14 @@
         background-position: 0 0;
     }
 }
+
+.control-icon {
+    background-image: url(../assets/controls.png);
+    background-size: 54px 470px;
+    background-repeat: no-repeat;
+    display: inline-block;
+
+    &.control-icon-birthday {
+        background-position: -18px -338px;
+    }
+}
