--- a/scss/theme/_colors.scss
+++ b/scss/theme/_colors.scss
@@ -7,6 +7,7 @@ $link: #385898;
 $text-primary: #1c1e21;
 $text-secondary: #606770;
 $text-muted: #606770;
+$text-small: #90949c;
 $text-white: #ffffff;
 $background: #e9ebee;
 $background-button: #ebedf0;
