--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,7 @@
 @import 'components/input';
 @import 'components/card';
 @import 'components/alert';
+@import 'components/badge';
 @import 'components/miscellaneous';
 @import 'components/icon';
 
