--- a/scss/pages/_newsfeed.scss
+++ b/scss/pages/_newsfeed.scss
@@ -84,6 +84,10 @@
 }
 
 #widgets-container {
+    & > * {
+        margin-bottom: 10px;
+    }
+
     .alerts-container {
         font-size: 0.8125rem;
 
@@ -108,6 +112,90 @@
 
         .alert-description {
             color: $text-small;
+        }
+    }
+
+    .page-overview {
+        .page-selector {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 3px 0;
+
+            i {
+                vertical-align: bottom;
+                width: 16px !important;
+                height: 16px !important;
+            }
+        }
+
+        .page-summary {
+            border-bottom: 1px solid $border;
+            padding: 10px 0px;
+
+            .page-avatar {
+                display: inline-block;
+                width: 60px;
+                height: 60px;
+                vertical-align: middle;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            .page-info {
+                display: inline-block;
+                vertical-align: middle;
+                margin-left: 10px;
+
+                > {
+                    * + * {
+                        margin-top: 5px;
+                    }
+                }
+
+                .page-name {
+                    font-size: 0.875rem;
+                    font-weight: bold;
+                }
+
+                .page-attribute-caption {
+                    font-size: 0.8125rem;
+                    color: $text-secondary;
+                }
+
+                .badge {
+                    font-size: 0.625rem;
+                }
+            }
+        }
+
+        .page-actions {
+            display: flex;
+            justify-content: space-around;
+            align-content: center;
+
+            padding: 10px 0;
+            border-bottom: 1px solid $border;
+
+            .page-action {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                a {
+                    color: $text-small;
+                }
+            }
+
+            .action-icon {
+                width: 16px;
+                height: 16px;
+                margin-bottom: 5px;
+            }
         }
     }
 }
