--- a/scss/components/_icon.scss
+++ b/scss/components/_icon.scss
@@ -231,4 +231,11 @@
 
         background-position: 0px -36px;
     }
+
+    &.page-icon-promotion {
+        background-image: url(../assets/pages-4.png);
+        background-size: 28px 1088px;
+        background-repeat: no-repeat;
+        background-position: 0 -500px;
+    }
 }
