--- a/scss/pages/_newsfeed.scss
+++ b/scss/pages/_newsfeed.scss
@@ -262,4 +262,65 @@
             }
         }
     }
+
+    .recent-listings {
+        margin-top: 10px;
+
+        .card-header {
+            span {
+                color: $text-secondary;
+            }
+        }
+
+        .card-body {
+            padding-bottom: 10px;
+        }
+
+        .listings-container {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+
+            .listing {
+                position: relative;
+                width: 138px;
+                height: 138px;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+
+                .listing-price {
+                    display: inline-block;
+                    position: absolute;
+                    bottom: 5px;
+                    left: 6px;
+                    padding: 0 7px;
+
+                    font-size: 0.75rem;
+                    color: $white;
+                    background: rgba(0, 0, 0, 0.5);
+                }
+
+                .hide-button {
+                    display: inline-block;
+                    width: 11px;
+                    height: 11px;
+                    position: absolute;
+                    top: 5px;
+                    right: 5px;
+                    background: url('../assets/close-button.png');
+                    background-position: 0 35px;
+                }
+            }
+        }
+
+        .more-listing-link {
+            display: inline-block;
+            margin-top: 10px;
+            font-size: 0.8125rem;
+        }
+    }
 }
