--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -20,6 +20,8 @@
     border: none;
     background: $background-button;
     border: 1px solid $border;
+    padding: 5px 10px;
+    border-radius: 2px;
 
     &:hover {
         background: $background-hover !important;
