--- a/scss/components/_icon.scss
+++ b/scss/components/_icon.scss
@@ -245,3 +245,16 @@
         background-position: 0 -500px;
     }
 }
+
+.group-icon {
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    background-image: url(../assets/fb-group-icons.png);
+    background-size: 36px 86px;
+    background-repeat: no-repeat;
+
+    &.group-icon-join {
+        background-position: 0 -72px;
+    }
+}
