finish language widget

--- a/scss/components/_icon.scss
+++ b/scss/components/_icon.scss
@@ -200,6 +200,10 @@
     &.control-icon-store {
         background-position: -36px -320px;
     }
+
+    &.control-icon-add {
+        background-position: -25px -426px;
+    }
 }
 
 .page-icon {
