--- a/scss/components/_icon.scss
+++ b/scss/components/_icon.scss
@@ -204,6 +204,10 @@
     &.control-icon-add {
         background-position: -25px -426px;
     }
+
+    &.control-icon-adchoice {
+        background-position: 0 -356px;
+    }
 }
 
 .page-icon {
