--- a/scss/pages/_newsfeed.scss
+++ b/scss/pages/_newsfeed.scss
@@ -429,3 +429,25 @@
         }
     }
 }
+
+#footer {
+    padding: 10px 10px 50px 10px;
+    padding-bottom: 50px;
+    font-size: 0.8125rem;
+
+    .footer-links {
+        opacity: 0.7;
+
+        a {
+            color: $text-secondary;
+        }
+        a + a::before {
+            content: '· ';
+        }
+    }
+
+    .footer-copyright {
+        margin-top: 5px;
+        color: $text-muted;
+    }
+}
