--- a/scss/layout/_config.scss
+++ b/scss/layout/_config.scss
@@ -8,3 +8,4 @@ $breakpoints: (
 $container-width: 1024px;
 $nav-bar-height: 42px;
 $messenger-bar-width: 210px;
+$messenger-bar-settings-height: 30px;
