--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,7 @@
 @import 'theme/default.scss';
 
 @import 'components/button';
+@import 'components/scrollbar';
 @import 'components/input';
 @import 'components/card';
 @import 'components/alert';
