--- a/scss/components/_icon.scss
+++ b/scss/components/_icon.scss
@@ -208,6 +208,12 @@
     &.control-icon-adchoice {
         background-position: 0 -356px;
     }
+
+    &.control-icon-add-story {
+        width: 24px;
+        height: 24px;
+        background-position: 0 -184px;
+    }
 }
 
 .page-icon {
