--- a/scss/theme/_colors.scss
+++ b/scss/theme/_colors.scss
@@ -20,5 +20,7 @@ $background-hover: rgba(0, 0, 0, 0.2);
 $background-hover-light: rgba(255, 255, 255, 0.5);
 
 $border: #dddfe2;
+
+$new-story: #428fe5ff;
 // ==============
 $white: #fff;
