responsive messenger sidebar

--- a/scss/layout/_laptop.scss
+++ b/scss/layout/_laptop.scss
@@ -75,5 +75,69 @@ section {
         top: auto;
         right: 50px;
         height: auto;
+        background: $white;
+        z-index: 9999;
+
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        overflow: hidden;
+
+        #messenger-bar-header {
+            display: flex !important;
+            align-items: center;
+            width: 100%;
+            height: 40px;
+            padding: 10px;
+            border-bottom: 1px solid $border;
+
+            &:hover {
+                background: $background-hover;
+            }
+
+            .header-caption-container {
+                display: flex;
+                flex-direction: column;
+                flex-grow: 1;
+
+                .header-caption {
+                    font-weight: bold;
+                    font-size: 0.875rem;
+                }
+
+                .header-description {
+                    font-size: 0.75rem;
+                    color: $text-secondary;
+                }
+            }
+
+            .setting-button {
+                margin: 0 5px;
+                width: 16px;
+                height: 16px;
+
+                filter: brightness(0.4);
+            }
+        }
+
+        #messenger-bar {
+            display: none !important;
+            max-height: 450px;
+
+            &.show {
+                display: block !important;
+            }
+        }
+
+        #messenger-bar-settings {
+            display: none !important;
+
+            &.show {
+                display: flex !important;
+
+                .setting-button {
+                    display: none !important;
+                }
+            }
+        }
     }
 }
