finish basic post composer layout

--- a/scss/components/_icon.scss
+++ b/scss/components/_icon.scss
@@ -170,6 +170,18 @@
         background-position: 0 -1666px;
     }
 
+    &.fb-icon-photos {
+        background-position: 0 -874px;
+    }
+
+    &.fb-icon-tag-friends {
+        background-position: 0 -566px;
+    }
+
+    &.fb-icon-feelings {
+        background-position: 0 -522px;
+    }
+
     &.fb-icon-apps {
         background-image: url(../assets/fb-icons-2.png);
         background-size: 22px 318px;
