--- a/scss/theme/_colors.scss
+++ b/scss/theme/_colors.scss
@@ -12,6 +12,8 @@ $text-white: #ffffff;
 $background: #e9ebee;
 $background-button: #ebedf0;
 
+$background-badge: #f5f6f7;
+
 $background-card-header: #f5f6f7;
 $background-card-body: #ffffff;
 
