--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -33,6 +33,10 @@
     }
 }
 
+.btn-primary {
+    background: $color-primary;
+}
+
 .btn-link {
     display: inline-flex;
     align-items: center;
